GCE-385 – fix extra spaces and weird ul CSS issue

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -40,9 +40,6 @@ h5 {
     width: 100%;
   }
 }
-ul.home-orbit {
-  height: 200px!important;
-}
 .orbit-container {
  .orbit-slides-container {
     li > .row > .medium-6 {
